# separator

./: AUTHORS  Makefile.am  README.md  configure.ac  e-module-separator.edc  meson.build  module.desktop  module.desktop.in  separator.edc
po/: ar.po  be.po  bg.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fo.po  fr.po  he.po  hr.po  hu.po  it.po  ja.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  separator.pot  sk.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po
src/: e_mod_main.c  e_mod_main.h
